2020-07-08  Markus Gans  <guru.mail@muenster.de>
	* New data wrapper class FData

2020-07-06  Markus Gans  <guru.mail@muenster.de>
	* Add a document that describes how to create user themes

2020-06-11  Markus Gans  <guru.mail@muenster.de>
	* New widget FBusyIndicator to indicate background activity
	* Added example/busy to demonstrate the functionality of this widget

2020-06-07  Markus Gans  <guru.mail@muenster.de>
	* The --log-file parameter stores log output to any file. The file 
	  can be viewed directly on another terminal with "tail -f".

2020-06-06  Markus Gans  <guru.mail@muenster.de>
	* Now, the terminal is not initialized before the method show() 
	  is called. Or you force it explicitly via the FApplication object.
	* Simplification of FMouse::createMouseObject()

2020-05-30  Markus Gans  <guru.mail@muenster.de>
	* With the two new methods FApplication::setDarkTheme() and 
	  FApplication::setDefaultTheme() you can now change the theme 
	  within an application. An example can be found in examples/ui 
	  via the menu items "View" -> "Dark mode".

2020-05-29  Markus Gans  <guru.mail@muenster.de>
	* Adding a dark theme. Can be activated with the --dark-theme parameter.

2020-05-28  Markus Gans  <guru.mail@muenster.de>
	* FColorPalette now also uses polymorphism, so you can now 
	  easily create your own color palette theme

2020-05-26  Markus Gans  <guru.mail@muenster.de>
	* FWidgetColors now uses polymorphism, so you can now easily 
	  create your own widget color theme
	* FApplication has got the new virtual method processExternalUserEvent() 
	  for user code

2020-05-24  Markus Gans  <guru.mail@muenster.de>
	* New class FStringStream implements input and output operations 
	  on FString based streams
	* Fixed memory leak in FString move assignment operator

2020-05-21  Markus Gans  <guru.mail@muenster.de>
	* Fixed the event queue in FApplication

2020-05-16  Markus Gans  <guru.mail@muenster.de>
	* More direct access to the static FTerm functions
