@@ -1,3 +1,9 @@
+2020-07-19  Markus Gans  <guru.mail@muenster.de>
+	* API: Some method name changes: 
+	       FObject::delOwnTimer() -> FObject::delOwnTimers() 
+	       FObject::delAllTimer() -> FObject::delAllTimers() 
+	       FWidget::delCallbacks() -> FWidget::delAllCallbacks()
+
 2020-07-08  Markus Gans  <guru.mail@muenster.de>
 	* New data wrapper class FData
 
